--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs: #Workflow run is made up of one or more jobs
           # Created the Secrets Under the Repo only with These Variables
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }} #--> Define Region of the AWS-CLI
+          aws-region: us-east-1 #--> Define Region of the AWS-CLI
       - name: npm install
         env:
           CI: true
