--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,17 @@ jobs: #Workflow run is made up of one or more jobs
     runs-on: ubuntu-latest #Through which Server OS we need to Work (type of machine to run the job on)
     steps:
       #Using versioned actions
-      - uses: actions/checkout@v2 # --> Reference a specific version
-      - uses: actions/setup-node@v2 # --> To Setup the Server With Node Env
+      - uses: actions/checkout@v3 # --> Reference a specific version
+      - uses: actions/setup-node@v3 # --> To Setup the Server With Node Env
         with:
-          node-version: '18' #--> Specify the Version of the Node
+          node-version: '20' #--> Specify the Version of the Node
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1 #--> Setup the Credential for the AWS cli
+        uses: aws-actions/configure-aws-credentials@v3 #--> Setup the Credential for the AWS cli
         with:
           # Created the Secrets Under the Repo only with These Variables
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 #--> Define Region of the AWS-CLI
+          aws-region: ${{ secrets.AWS_REGION }} #--> Define Region of the AWS-CLI
       - name: npm install
         env:
           CI: true
