--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs: #Workflow run is made up of one or more jobs
     runs-on: ubuntu-latest #Through which Server OS we need to Work (type of machine to run the job on)
     steps:
       #Using versioned actions
-      - uses: actions/checkout@v3 # --> Reference a specific version
-      - uses: actions/setup-node@v3 # --> To Setup the Server With Node Env
+      - uses: actions/checkout@v4 # --> Reference a specific version
+      - uses: actions/setup-node@v # --> To Setup the Server With Node Env
         with:
           node-version: '20' #--> Specify the Version of the Node
       - name: Configure AWS Credentials
@@ -20,7 +20,7 @@ jobs: #Workflow run is made up of one or more jobs
           # Created the Secrets Under the Repo only with These Variables
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }} #--> Define Region of the AWS-CLI
+          aws-region: ${{ secrets.MY_APP_AWS_REGION }} #--> Define Region of the AWS-CLI
       - name: npm install
         env:
           CI: true
