--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on: #Name of the GitHub event that triggers the workflow
 jobs: #Workflow run is made up of one or more jobs
   deploy_lambda:
     runs-on: ubuntu-latest #Through which Server OS we need to Work (type of machine to run the job on)
+    environment: qa
     steps:
       #Using versioned actions
       - uses: actions/checkout@v4 # --> Reference a specific version
@@ -15,7 +16,7 @@ jobs: #Workflow run is made up of one or more jobs
         with:
           node-version: '20' #--> Specify the Version of the Node
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1 #--> Setup the Credential for the AWS cli
+        uses: aws-actions/configure-aws-credentials@v3 #--> Setup the Credential for the AWS cli
         with:
           # Created the Secrets Under the Repo only with These Variables
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
