--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -1,4 +1,4 @@
-name: Deploy #Name of the Workflow
+name: deploy-qa #Name of the Workflow
 
 on: #Name of the GitHub event that triggers the workflow
   push: #On Push Event We need to take action
@@ -21,7 +21,7 @@ jobs: #Workflow run is made up of one or more jobs
           # Created the Secrets Under the Repo only with These Variables
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 #--> Define Region of the AWS-CLI
+          aws-region: ${{ secrets.AWS_REGION }} #--> Define Region of the AWS-CLI
       - name: Install dependencies
         run: |
           if [ -e yarn.lock ]; then
@@ -34,9 +34,20 @@ jobs: #Workflow run is made up of one or more jobs
       - name: build
         run: |
           npm run build
-      - name: deploy
+      - name: deploy lambda getBlogs
         run: |
           zip -j deploy.zip ./build/src/functions/getBlogs/index.js #--> Zip the Code As we know lambda function accept the zip file.
           aws lambda update-function-code --function-name=getBlogsLambda --zip-file=fileb://deploy.zip
+          rm -f deploy.zip
+      - name: deploy lambda deleteBlog
+        run: |
+          zip -j deploy.zip ./build/src/functions/deleteBlog/index.js #--> Zip the Code As we know lambda function accept the zip file.
+          aws lambda update-function-code --function-name=deleteBlogLambda --zip-file=fileb://deploy.zip
+          rm -f deploy.zip
+      - name: deploy lambda postBlog
+        run: |
+          zip -j deploy.zip ./build/src/functions/postBlog/index.js #--> Zip the Code As we know lambda function accept the zip file.
+          aws lambda update-function-code --function-name=postBlogLambda --zip-file=fileb://deploy.zip
+          rm -f deploy.zip
 
 # At last the AWS CLI command to Update the Zip file with existing One (With Correct Function Name)
